--- a/package.json
+++ b/package.json
@@ -37,7 +37,17 @@
     "@angular/platform-browser": "^12.1.0",
     "@angular/platform-browser-dynamic": "^12.1.0",
     "@angular/router": "^12.1.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@ngrx/effects": "^12.3.0",
+    "@ngrx/entity": "^12.3.0",
+    "@ngrx/schematics": "^12.3.0",
+    "@ngrx/store": "^12.3.0",
+    "@ngrx/store-devtools": "^12.3.0",
     "@nrwl/angular": "12.6.2",
+    "bootstrap": "^5.0.2",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -50,16 +60,21 @@
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "^12.1.0",
     "@angular/language-service": "^12.1.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.6.2",
     "@nrwl/cypress": "12.6.2",
     "@nrwl/eslint-plugin-nx": "12.6.2",
     "@nrwl/jest": "12.6.2",
     "@nrwl/linter": "12.6.2",
+    "@nrwl/nest": "^12.6.2",
+    "@nrwl/node": "12.6.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "12.6.2",
     "@nrwl/workspace": "12.6.2",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "cypress": "^7.3.0",
